--- a/GameLibraryManagerTests/GameLibraryManagerTests.csproj
+++ b/GameLibraryManagerTests/GameLibraryManagerTests.csproj
@@ -4,6 +4,7 @@
     <TargetFramework>net8.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+    <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
 
     <IsPackable>false</IsPackable>
     <IsTestProject>true</IsTestProject>
@@ -17,11 +18,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Using Include="Xunit" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <ProjectReference Include="..\GameLibraryManager\GameLibraryManager.csproj" />
+    <ProjectReference Include="..\GameLibraryManager.csproj" />
   </ItemGroup>
 
 </Project>
